fixed production method bug in ltvBaseIndustry